uptime/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime 
  namespace: final
spec:
  selector:
    app: uptime
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3001
